# wikiparse

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  Snakefile  create_insert_sqlite.sh  dev_setup.sh  parse.py  pyproject.toml  run_black.sh  run_checks.py  run_checks.sh  run_flake8.sh  run_mypy.sh  run_tests.py  run_tests.sh  scrape_to_sqlite.sh  setup.cfg  setup.py
dumplabels/: dump_labels.lua  non_gram.py  run.sh
dumpsplit/: Cargo.toml
dumpsplit/src/: main.rs
test/: conftest.py  test_parse.py
test/data/: armo  kayda  kertoa  maki  pitaa  saada  vuotta
test/data/mod_data/: non_gram.json  pos_categories.json
test/data/words/: aivojuovio  ammattikorkeakoulu  bakteriologi  humalassa  ja  kummaksua  on  pitaa  saattaa  sanoa  tulla  voima
wikiparse/: __init__.py  context.py  enums.py  exceptions.py  gram_words.py  insert.py  models.py  normseg_data.py  parse.py  parse_assoc.py  parse_defn.py  parse_deriv.py  parse_ety.py  queries.py  stats_log.py  tables.py  template_data.py  template_utils.py  textify.py
wikiparse/assoc/: __init__.py  fst.py  identispan.py  interpret.py  lex.py  models.py  parse.py  utils.py
wikiparse/cmd/: __init__.py  db.py  fst.py  introspect.py  lookup.py  mk_db.py  parse.py  stats.py
wikiparse/data/: gram_words.py  template.py
wikiparse/db/: insert.py  tables.py
wikiparse/utils/: __init__.py  cmd.py  dataclasses.py  db.py  fst.py  iter.py  json.py  mod_data.py  nlp.py  stats_log.py  std.py  template.py  wikicode.py
