[metadata]
description-file = README.md

[flake8]
ignore = E741, W503, E501, E203, E722
max-line-length = 88

[mypy-mwparserfromhell.*]
ignore_missing_imports = True

[mypy-more_itertools.*]
ignore_missing_imports = True

[mypy-nltk.*]
ignore_missing_imports = True

[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-tblib.*]
ignore_missing_imports = True

[mypy-langdetect.*]
ignore_missing_imports = True

[mypy-pybloom.*]
ignore_missing_imports = True

[mypy-semserv.*]
ignore_missing_imports = True

[mypy-plumbum.*]
ignore_missing_imports = True

[mypy-copyreg.*]
ignore_missing_imports = True

[mypy-mwxml.*]
ignore_missing_imports = True

[mypy-sqlitedict.*]
ignore_missing_imports = True

[mypy-wordfreq.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-boltons.*]
ignore_missing_imports = True
