[package]
name = "dumpsplit"
version = "0.1.0"
authors = ["Frankie Robertson <frankie@robertson.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { git = "https://github.com/frankier/quick-xml.git" }
twoway = "0.2.1"
lazy_static = "1.4.0"
regex = "1.3.7"

[profile.release]
lto = "fat"
codegen-units = 1

